Se realizo la extraccion de endpoints y verbos

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Programa para realizar la transformación de un contrato yaml a un feature",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/index.js"
   },
   "author": "Juan Ramon Gonzalez",
   "license": "ISC",
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "nodemon": "2.0.22"
   }
 }
